Adicionando arquivos modificado na parte do modal, e o redirecionamento para a section trailer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="header__links">
                 <ul class="header__links__item">
                     <li>
-                        <a href="#" class="button__trailer" id="trailerButton">Trailer</a>
+                        <a href="#trailerButton" class="button__trailer">Trailer</a>
                     </li>
                     <li>
                         <a href="#" class="button__ingresso">Ingresso</a>
@@ -33,11 +33,7 @@
             </div>
         </div>
     </header>
-    <div class="iframe__container" id="iframe__container">
-        <img src="./dist/images/icons8-excluir-24 (1).png" alt="" id="closeBtn">
-        <iframe class="iframeModal" id="iframeModal" width="560" height="315" src="https://www.youtube.com/embed/zrtVOZ4YPFw?si=AIwkDdkhfVgX9qTk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
-    </div>
+
 
     <div class="iframe__modal" id="iframe__modal">
         <img src="./dist/images/icons8-excluir-24 (1).png" alt="" id="closeBtnModal">
@@ -230,7 +226,7 @@
             </div>
         </div>
     </section>
-    <section class="trailer">
+    <section class="trailer" id="trailerButton">
         <div class="trailer__container">
             <div class="video">
                 <h1 class="title">assista o trailer</h1>
